--- a/contents/compelling/engage_the_user_on_an_emotional_level.tex
+++ b/contents/compelling/engage_the_user_on_an_emotional_level.tex
@@ -3,7 +3,7 @@ It is a truism that you can lead a horse to water, but you can't make it drink. 
 No matter how easy to access, how important, and how personalised the information, if we cannot engage and maintain the user's interest,
 they will likely ignore the information we provide, possibly to their significant detriment.
 We must think like salespeople, like bestselling authors, like ad-agency strategists.
-This is often a difficult shift in mindset for scientists and engineers to make.
+This is often a difficult shift in mindset for scientists and engineers to make.\\
 
 It is important to recognise the difference between ourselves and our motivations, and the motivations of our users. Whilst we engage with the data in a scientific
 manner, the users do not. They have no inherent interest. In fact, it is quite possible that our own interest is less in the information per-se, and more in the process
@@ -18,7 +18,7 @@ emotional impulses. We may wish the world to be a rational place driven by the c
     technique of using a stop sign, radioactivity icon, or red text as a way of indicating danger or some situation that requires attention, is an
     application of exactly this technique. We are invoking a fear-response, however mild.
 
-    \item Note however that not all triggers are culturally independent. Colour is particularly interesting in this respect, and your use of colour might
+    \item Responses are not neccessarily culturally independent. Colour is particularly interesting in this respect, and your use of colour might
     need to be modified for different target audiences (\textbf{NEED REFERENCE}).
 
     \item Desire can be maintained by creating an ongoing narrative, or letting the data tell a story. This can be as simple as showing the change in 
