--- a/contents/compelling/show_the_user_that_you_are_trustworthy.tex
+++ b/contents/compelling/show_the_user_that_you_are_trustworthy.tex
@@ -10,9 +10,10 @@ Always ask for permission to capture data and make clear what it will be used fo
 \subsubsection*{Suggested strategies} 
 
 \begin{itemize}
-    \item Use secure platforms, such as SSL if we develop a web application.
-    \item If we use third-party APIs, make sure to check the level of security they offer.
+    \item Use secure platforms, such as SSL if you develop a web application.
+    \item If you use third-party APIs, make sure to check the level of security they offer.
     \item Implement a system that does not allow linking the data with a user.
+    \item Tell the user why you need their data, and how you will use it.
     \item Give the user the possibility to delete their data if they wish.
 \end{itemize}
 
@@ -27,7 +28,7 @@ For the identification of the user a secure and proven API has been used. We use
 that Firebase provides. This API provides us with an identifier, which may be encrypted.
 We have of course used encryption. When the data reaches our database,
 we check the user and then we re-encrypt the user with our own salt to
-avoid linking firebase with our database.\\
+ensure that it is not possible to relate the identification of the firebase user with our database. \\
 
 We never store the users exact location, only the polygon where he is.
 We have also implemented a time limit, which allows us to have the necessary precision to show exposure to pollutants, but doesn't allow user tracking.\\
@@ -37,10 +38,13 @@ To get this permission, one should require an explicit action. In our case, the 
 that we may determine their position. Of course the user can always revoke this permission and
 delete their data at any time. \\
 
+Some users indicated that they would prefer to create an account with a username and password
+rather than use their email accounts, for fear of "information theft"
+
 \begin{figure}[ht]
     \centering
     \subfigure[Location Access]
-        {\includegraphics[width=5.5cm  ]{locationAccess}}
+        {\includegraphics[width=5.5cm]{locationAccess}}
     \hfill
     \subfigure [Settings]
         {\includegraphics[width=5.5cm]{settings}}
@@ -57,10 +61,3 @@ they are identified, and of course, the identification is optional. \\
     \includegraphics[width=8cm]{loginInfo}
     \caption{Info before login}
 \end{figure}
-
-\begin{itemize}
-    \item Code of good practices
-    \item It is not possible to relate the identification of the firebase user with our database
-    \item Some users indicated that they would prefer to create an account with a username and password
-          rather than use their email accounts, for fear of "information theft"
-\end{itemize}
