--- a/contents/compelling/solve_a_real_problem.tex
+++ b/contents/compelling/solve_a_real_problem.tex
@@ -2,38 +2,40 @@
 
 Once the relevance has been demonstrated, we consider the benefits and advantages that the use of the data as a user can bring us.
 This objective requires meticulous work both to discover it and to transmit these concepts to the user in a clear way,
-simple and direct and thus achieve a link that increases the curiosity of the user to deepen the subject and
-stay informed.\\
+simple and direct and thus achieve a link that increases the curiosity of the user to deepen the subject and stay informed.\\
 
-It is very important to stay in the user's place and discover what is really necessary for him. Only if the user understands the relevance of
-the data and the influence that these have in their daily life, a commitment on the part of this will be possible.\\
+It is very important to stay in the user's place and discover what is really necessary for him.
+Only if the user understands the relevance of the data and the influence that these have in their daily life, a commitment on the part of this will be possible.\\
 
-That is, the information should cover a need of the user, even if the user does not know a priori that he has this need. Maybe it's
-Our goal is to let he see how useful and advantageous this data usage can be.\\
+That is, the information should cover a need of the user, even if the user does not know a priori that he has this need.
+Maybe it's our goal is to let he see how useful and advantageous this data usage can be.\\
 
-When we have some data that is updated periodically, we must think in what way the fluctuation may interest us or that certain
-changes Here comes the representation of the information in a way that awakens the need for data monitoring by
-of the user.
+When we have some data that is updated periodically, we must think in what way the fluctuation may interest us or that certain changes.
+Here comes the representation of the information in a way that awakens the need for data monitoring by of the user.
 
 \subsubsection*{Suggested strategies} 
 
 \begin{itemize}
     \item First of all discover in what way the data can help users.
-    \item Next we have to find a way to let him see
-    because they are important to him and how he can benefit from using them in his daily life.
+    \item Next we have to find a way to let him see because they are important to him and how he can benefit from using them in his daily life.
     \item If the data is updated periodically, it is necessary to analyze what type of variations are important in the user's daily life.
-    Conduct a market study and see if there are already products that offer this information. If this is the case, it will be analyzed because
-    it is attractive to the user and try to improve it.
+    Conduct a market study and see if there are already products that offer this information.
+    If this is the case, it will be analyzed because it is attractive to the user and try to improve it.
 \end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 
-The user is offered a platform that indicates his exposure to totally customized air pollution if the need to carry
-no device for reading pollutants.\\
+The user is offered a platform that indicates his exposure to totally customized air pollution without the need to carry a device for reading pollutants.\\
+
+Unique feature, fully customized pollution exposure monitoring. \\
+
+Description of the effects, polluting sources, description of the pollutants in a single platform. \\
 
 Air Guru with explicit permission to read the location by the user, pick up the polygon where
-the user is found and stores the most recent pollution measure for that polygon. Next, the
-user can view the exposure to the pollution to which he has been subjected.
+the user is found and stores the most recent pollution measure for that polygon.
+Next, the user can view the exposure to the pollution to which he has been subjected.\\
+
+Presenting how exposure to pollution can be reduced more specifically.\\
 
 \begin{figure}[ht]
     \centering 
@@ -58,12 +60,5 @@ user can view the exposure to the pollution to which he has been subjected.
 \end{figure}
 
 We can see the exposure to air pollution since 2018 without having to have been using the webtool since
-Using the import Google chronology button, we can import the location history provided by the
-pollution that has been exposed since 2018. In the help section we can find a guide how to
-export and import this history of locations.
-
-\begin{itemize}
-    \item Unique feature, fully customized pollution exposure monitoring
-    \item Description of the effects, polluting sources, description of the pollutants in a single platform
-    \item Presenting how exposure to pollution can be reduced more specifically
-\end{itemize}
+using the import Google chronology button, we can import the location history provided by the pollution that has been exposed since 2018.
+In the help section we can find a guide how to export and import this history of locations.
