--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -30,7 +30,7 @@ Therefore, we can not say that data interfaces are commonly accessible in a usef
  
 \subsubsection*{In the context of Aire Guru \ldots} 
 
-Our webtool uses the air quality data provided by the city of Málaga in its open data portal.(https://datosabiertos.malaga.eu/)\\
+Our website uses the air quality data provided by the city of Málaga in its open data portal.(https://datosabiertos.malaga.eu/)\\
 
 \begin{figure}[ht]
     \centering
