--- a/contents/accessible/remove_all_barriers_to_access.tex
+++ b/contents/accessible/remove_all_barriers_to_access.tex
@@ -16,7 +16,7 @@ Of course, if you are working with third party data you might have no option. \\
 Advertising is the least problematic of these, as long as it is delivered in a non-intrusive manner, however
 all of us have noticed how annoying is to be reading an article when a significant percentage of the screen is taken up with advertising.
 We do not want to give the same impression to our users since it can repel them to the point that they will no longer
-user our tool. For small screen sizes it is even more difficult because there is so little available space.\\
+use our site. For small screen sizes it is even more difficult because there is so little available space.\\
 
 \subsubsection*{Suggested strategies} 
 
