--- a/contents/aire_guru/_section.tex
+++ b/contents/aire_guru/_section.tex
@@ -18,7 +18,7 @@ To make this information as accessible as possible, it should be freely and publ
 must be simple enough to be understandable by the average citizen.\\
 
 
-We have created a webtool - Aire Guru - which collects air pollution data periodically, stores it for historical use, 
+We have created a website - Aire Guru - which collects air pollution data periodically, stores it for historical use, 
 processes it to extract relevant information, personalizes it to engage the user with regard to their individual
 circumstance, visualizes it in an easy to understand format, and provides it online to facilitate its accessibility free of charge. Furthermore,
 descriptions of all the data and how it has been processed are also provided to raise public awareness of the value
@@ -45,7 +45,7 @@ The most common problems are:
 
 \end{itemize}
 
-Our webtool solves the deficiencies described above.\\
+Our website solves the deficiencies described above.\\
 
 Measurements are published hourly and come from measurement stations placed throughout the 
 city of Málaga, covering entire urban region at a granularity of $100m^2$.\\
@@ -61,7 +61,7 @@ As we mentioned it before, the data is provided on the Malaga's open data portal
 air pollution information for the averange user. Even if the user find it, it is not 
 easierly located. Aire Guru needs to provide the information in a way that it is easier for the user and preferably, direct.
 This means, Aire Guru shows the information without the need for the user to perform any extra action, just opening the
-webtool in a browser.\\
+website in a browser.\\
 
 The data offered in the open data portal is in GeoJson format. This format is highly structured and using specific software could be
 processed i a relatively easy way, even though, it is not really interpretable for humans. Aire Guru translate all the 
