--- a/contents/aire_guru/evaluation.tex
+++ b/contents/aire_guru/evaluation.tex
@@ -12,11 +12,11 @@ map, and suggested increasing the number of zones.
 understandable.\\
 
 More than half of the respondents admit that they did not know the meaning of the air quality index, but after
-using the webtool, they now understand it.\\
+using the website, they now understand it.\\
 
 Regarding their interest about air quality, half of them indicated that they had never sought information about it,
 only two were previously well informed, and one of them marked the 'other' option and specified that using the application had aroused their interest.
-In addition, four of them indicated that, thanks to the webtool, they have now discovered they have a medical condition that is affected by air quality.\\
+In addition, four of them indicated that, thanks to the website, they have now discovered they have a medical condition that is affected by air quality.\\
 
 Among the test subjects, a greater awareness of pollution has been recognized, and they now show more interest in the
 air quality in the city and its possible effects on their health.
