--- a/contents/compelling/show_the_user_that_you_are_trustworthy.tex
+++ b/contents/compelling/show_the_user_that_you_are_trustworthy.tex
@@ -53,7 +53,7 @@ rather than use their email accounts, for fear of "information theft"
 
 The collection of locational data is not exhaustive, but guarantees accuracy. \\
 
-As we want a transparent webtool, we explain to the user that we need their data before
+As we want a transparent website, we explain to the user that we need their data before
 they are identified, and of course, the identification is optional. \\
 
 \begin{figure}[ht]
