--- a/contents/compelling/solve_a_real_problem.tex
+++ b/contents/compelling/solve_a_real_problem.tex
@@ -59,6 +59,6 @@ Presenting how exposure to pollution can be reduced more specifically.\\
     \caption{Personal Records. December}
 \end{figure}
 
-We can see the exposure to air pollution since 2018 without having to have been using the webtool since
+We can see the exposure to air pollution since 2018 without having to have been using the website since
 using the import Google chronology button, we can import the location history provided by the pollution that has been exposed since 2018.
 In the help section we can find a guide how to export and import this history of locations.
