--- a/contents/compelling/use_a_familiar_and_obvious_user_interface.tex
+++ b/contents/compelling/use_a_familiar_and_obvious_user_interface.tex
@@ -76,7 +76,7 @@ We use clouds to represent air quality measurements, accompanied by a heart if t
 %     \caption{Filters}
 % \end{figure}
 
-Due to the large amount of data that is offered to the user, a waiting icon has been implemented to indicate that the webtool is processing information.
+Due to the large amount of data that is offered to the user, a waiting icon has been implemented to indicate that the website is processing information.
 Each time a control is pressed on the page, it is indicated with a change of color tonality.
 In addition, progressive transitions are used to indicate a process is happening.\\
 
