--- a/contents/compelling/your_site_should_look_good.tex
+++ b/contents/compelling/your_site_should_look_good.tex
@@ -48,8 +48,8 @@ lower area where we have the zone and custom history.\\
     \caption{Heading}
 \end{figure}
  
-The symbol of our webtool is a genius - a guru. We also include the word "Aire" in the logo, because it perfectly represents 
-what we show with our webtool. Aire, as you might have guessed, is Spanish for Air. Aire Guru is the guru of air quality. \\
+The symbol of our website is a genius - a guru. We also include the word "Aire" in the logo, because it perfectly represents 
+what we show with our website. Aire, as you might have guessed, is Spanish for Air. Aire Guru is the guru of air quality. \\
 
-Finally, we've taken into account that the user may wish to use our webtool on different devices, therefore we have implemented
+Finally, we've taken into account that the user may wish to use our website on different devices, therefore we have implemented
 two different formats, one for larger screens such as the computer and another for smaller format tablets or mobile devices.
