--- a/contents/preliminaries/know_your_user.tex
+++ b/contents/preliminaries/know_your_user.tex
@@ -39,9 +39,9 @@ During our market study, we found that many existing tools offer information abo
     \item No of explanation of the consequences of pollution exposure, particularly their influence on health or medical conditions.
 \end{itemize}
 
-Once Aire Guru was operational, we tested it with 14 identified users. Our webtool integrates Google Analytics that allow us to evaluate
+Once Aire Guru was operational, we tested it with 14 identified users. Our website integrates Google Analytics that allow us to evaluate
 user behavior, how many pages they access, and how long they stay on each page.
-After testing, we surveyed the users to measure not only the level of overall satisfaction with the webtool,
+After testing, we surveyed the users to measure not only the level of overall satisfaction with the website,
 but also to verify the utility and determine if the user was able to achieve their objective.\\
 
 The survey gave us positive evaluations regarding the useability, interpretability, and depth of information reported. 
