--- a/contents/preliminaries/understand_your_purpose.tex
+++ b/contents/preliminaries/understand_your_purpose.tex
@@ -2,7 +2,7 @@
 
 It is important to have a clear idea of why you are publishing your data. Most of the principles
 we describe are applicable to both commercial concerns i.e. you have some data that you think
-people will pay for, and public-good data, such as in our Aire Guru webtool. We write, however,
+people will pay for, and public-good data, such as in our Aire Guru website. We write, however,
 with the assumption that you want to maximise your attraction to your users, who are most likely
 the general public, or some subset thereof, and who are not scientifically motivated.\\
 
