--- a/contents/relevant/personalize_the_data_for_each_user.tex
+++ b/contents/relevant/personalize_the_data_for_each_user.tex
@@ -21,7 +21,7 @@ users. You have to know these in advance, and hence you must have demographic in
 
 \subsubsection*{In the context of Aire Guru \ldots}
 
-We are all interested in the pollution that surrounds us, since it affects our health. The webtool
+We are all interested in the pollution that surrounds us, since it affects our health. The website
 Aire Guru has been designed to specialize in this area. For those people who are especially sensitive to air pollution,
 Aire Guru shows the air pollution with respect to the six most common medical conditions that
 are affected by air pollutants.\\
@@ -74,7 +74,7 @@ a portable measurement station that monitors the different pollutants.\\
 
 It is possible that the user may have started to use the application and not yet have any available data.
 To deal with this, we have a facility to import a user's Google location history, enabling the user to visualize
-exposure to pollution since the beginning of 2018 even if they have not been using the webtool during that period.\\
+exposure to pollution since the beginning of 2018 even if they have not been using the website during that period.\\
 
 % TODO: not sure what this means
 % The filtering function of the medical condition is not self-selected, because the functionality
