--- a/contents/relevant/present_consequences_and_outcomes.tex
+++ b/contents/relevant/present_consequences_and_outcomes.tex
@@ -78,6 +78,6 @@ the point where the user is, serves as verification, gives more realism and conf
 
 \begin{itemize}
     \item The objective has been clearly defined and an investigation has been carried out, determining if the dataset is appropriate.
-    \item Worrying levels have been defined as poor, bad and unhealthy and are represented in the Air Guru webtool. They stand out clearly so that the user is able to locate them quickly.
+    \item Worrying levels have been defined as poor, bad and unhealthy and are represented in the Air Guru website. They stand out clearly so that the user is able to locate them quickly.
     \item The workflow is satisfactory, since the user knows the level of pollution at any location, at a simple glance. It is easy to explore the information further, if the user wishes.
 \end{itemize}
