--- a/contents/relevant/the_facts_and_just_the_facts.tex
+++ b/contents/relevant/the_facts_and_just_the_facts.tex
@@ -26,7 +26,7 @@ This should be entirely optional, and de-emphasised, because you typically can m
 
 The dataset used contains elements such as the identifier of the measurement station, whether the station is fixed or mobile
 and extra data that is provided by the company that collects the data. This data is not useful for us.
-For our webtool, only the coordinates of the measurement station have been used, as well as the time at which the measurement was recorded,
+For our website, only the coordinates of the measurement station have been used, as well as the time at which the measurement was recorded,
 and the most relevant value of the five pollutants Co, No2, O3, Pm1, Pm 2.5 and Pm10.\\
 
 In addition, while the measurement is unique for everyone, the general concept (the AQI) is common, and the ranges are the same for all users.
@@ -57,4 +57,4 @@ the point where the measure was taken since it has been selected in the main map
 
 Aire Guru provides the user with the ability to export the data. The comments of our testers revealed
 that this functionality is not useful for the average user, since they do not have the necessary tools to
-analyze the data and all the information is represented in a better format in the webtool itself.
+analyze the data and all the information is represented in a better format in the website itself.
