--- a/contents/compelling/show_the_user_that_you_are_trustworthy.tex
+++ b/contents/compelling/show_the_user_that_you_are_trustworthy.tex
@@ -1,7 +1,7 @@
 \subsection{Show the user that you are trustworthy}
 
-Trust between the platform we want to use and the user is essential.
-Therefore we will have to guarantee the protection of user privacy and promise that user data will be used only for specific purposes that the user clearly agrees to.
+Trust between your site and your users is essential.
+Therefore you have to guarantee the protection of user privacy and promise that user data will be used only for specific purposes that the user clearly agrees to.
 We must minimize the risk of disclosing user data, and maintain user safety, confidentiality and integrity of information.
 For this we must follow both the legal norms and an ethics of good practices.
 Do not require user identification merely to show general information.
@@ -24,22 +24,20 @@ of exposure to contamination, it is not essential to collect the user's details.
 SSL has been used to achieve a level of competent security, which guarantees the encryption of
 the information sent through the network.\\
 
-For the identification of the user a secure and proven API has been used. We use the identification
-that Firebase provides. This API provides us with an identifier, which may be encrypted.
-We have of course used encryption. When the data reaches our database,
-we check the user and then we re-encrypt the user with our own salt to
-ensure that it is not possible to relate the identification of the firebase user with our database. \\
+For the identification of the user we use Firebase, which is a commonly used, secure, and proven API.
+This API provides us with an identifier, which may be encrypted.
+When the data reaches our database, we verify the user identity and then re-encrypt the user with our own salt to
+ensure that it is not possible to correlate the Firebase identification with our database. \\
 
-We never store the users exact location, only the polygon where he is.
+We never store the users exact location, only a containing polygon derived from the sensor coverage.
 We have also implemented a time limit, which allows us to have the necessary precision to show exposure to pollutants, but doesn't allow user tracking.\\
 
-As per the code of good practice, never collect the user's position without their permission.
-To get this permission, one should require an explicit action. In our case, the user will have to select "Mi ubicacion" (My location) and accept 
-that we may determine their position. Of course the user can always revoke this permission and
-delete their data at any time. \\
+We never collect the user's position without their permission.
+To get this permission, we require an explicit action - the user has to select "Mi ubicacion" (My location) and accept that we may determine their position.
+Of course the user can always revoke this permission and delete their data at any time. \\
 
-Some users indicated that they would prefer to create an account with a username and password
-rather than use their email accounts, for fear of "information theft"
+During the post-launch survey, some users indicated that they would prefer to create an account with a username and password rather than use their email accounts, for fear of "information theft".
+We have not yet done this. \\
 
 \begin{figure}[ht]
     \centering
@@ -51,7 +49,7 @@ rather than use their email accounts, for fear of "information theft"
     \caption{Filters}
 \end{figure}
 
-The collection of locational data is not exhaustive, but guarantees accuracy. \\
+% The collection of locational data is not exhaustive, but guarantees accuracy. \\
 
 As we want a transparent website, we explain to the user that we need their data before
 they are identified, and of course, the identification is optional. \\
